fix for nav not showing in safari

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -93,6 +93,9 @@
     margin: 6px 0;
     transition: 0.4s;
 }
+#title {
+  overflow: visible;
+}
 #title.expanded .topbar {
     -webkit-transform: rotate(-45deg) translate(-6px, 6px);
     transform: rotate(-45deg) translate(-6px, 6px);
